--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 .gitattributes git-encoding=ISO8859-1 working-tree-encoding=ISO8859-1 export-ignore
 .gitignore git-encoding=ISO8859-1 working-tree-encoding=ISO8859-1 export-ignore
 README.md export-ignore
+*.zip export-ignore
 *ascii* git-encoding=ISO8859-1 working-tree-encoding=ISO8859-1
 *ebcdic* git-encoding=ISO8859-1 working-tree-encoding=IBM-1047
 *untag* git-encoding=ISO8859-1 working-tree-encoding=IBM-1047
